CHANGES:

- added Abilities of The Chain Master invocation
- tweaked Oath of Ancients aura warding to reduce damage from elements and also apply to self